# codec-compare-gen

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  deps.sh
src/: base.h  codec.cc  codec.h  codec_avif.cc  codec_avif.h  codec_avif_libheif.cc  codec_avif_libheif.h  codec_basis.cc  codec_basis.h  codec_combination.cc  codec_combination.h  codec_ffv1.cc  codec_ffv1.h  codec_jpegli.cc  codec_jpegli.h  codec_jpegmoz.cc  codec_jpegmoz.h  codec_jpegsimple.cc  codec_jpegsimple.h  codec_jpegturbo.cc  codec_jpegturbo.h  codec_jpegxl.cc  codec_jpegxl.h  codec_openjpeg.cc  codec_openjpeg.h  codec_webp.cc  codec_webp.h  codec_webp2.cc  codec_webp2.h  distortion.cc  distortion.h  frame.cc  frame.h  framework.cc  framework.h  result_json.cc  result_json.h  serialization.cc  serialization.h  task.cc  (+3 more)
tests/: test_ccgen.cc  test_codec.cc  test_codec_avif.cc  test_codec_sjpeg.cc  test_distortion.cc  test_framework.cc  test_serialization.cc  test_task.cc  test_worker.cc
tools/: are_images_equivalent.cc  ccgen.cc  ccgen_impl.cc  ccgen_impl.h  strip_metadata.cc
